hr-worker container